# keypa

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.embedded  README.md  cargo.toml  docker-compose.yml  migration.md  nginx.conf  seaql.md  setup.md  sqlx.md  start.sh
.github/workflows/: build_api.yaml  build_complete.yaml  build_docker.yaml
api/: Cargo.toml  Readme.md  spec.json
api/src/: gen_openapi.rs  main.rs  openapi.rs  sheduler.rs
api/src/api/: auth.rs  building.rs  comment.rs  department.rs  door.rs  door_group.rs  email.rs  key.rs  key_group.rs  keycard.rs  keycard_usage_history.rs  log.rs  mod.rs  request.rs  use_keycard.rs  user.rs  worker.rs
api/src/crud/: access.rs  building.rs  comment.rs  department.rs  door.rs  door_group.rs  email.rs  history.rs  key.rs  key_group.rs  keycard.rs  keycard_usage_history.rs  log.rs  mod.rs  request.rs  role.rs  room.rs  user.rs  worker.rs
api/src/crud/request/: change.rs  create.rs  get.rs  mod.rs
api/src/util/: convert_active.rs  crypto.rs  error.rs  mail.rs  mod.rs  user.rs
api/src/util/middleware/: extractor.rs  mod.rs
entities/: Cargo.toml
entities/src/model/: mod.rs  prelude.rs  sea_orm_active_enums.rs  tbl_admin.rs  tbl_building.rs  tbl_change_rights_history.rs  tbl_department.rs  tbl_door.rs  tbl_door_access_history.rs  tbl_door_group.rs  tbl_door_request.rs  tbl_door_to_group_door.rs  tbl_door_to_request.rs  tbl_door_to_request_history.rs  tbl_door_user_access.rs  tbl_key.rs  tbl_key_group.rs  tbl_key_group_key.rs  tbl_key_user_history.rs  tbl_keycard.rs  tbl_keycard_archive.rs  tbl_keycard_history.rs  tbl_keycard_request.rs  tbl_keycard_usage_history.rs  tbl_leader.rs  tbl_log.rs  tbl_request.rs  tbl_request_archive.rs  tbl_request_base.rs  tbl_request_comment.rs  tbl_request_department.rs  tbl_request_entrance.rs  tbl_request_history.rs  tbl_request_log.rs  tbl_role.rs  tbl_room.rs  tbl_room_department.rs  tbl_status.rs  tbl_temp_email.rs  tbl_temp_keycard_request.rs  (+3 more)
faces/: faces.sh
frontend/: 0001-wip-add-jwt-auth.patch  0002-add-more-endpoints.patch  0003-remove-paperclip.patch  0004-add-api-info.patch  0005-add-key_group-api-calls.patch  0006-minor-fixes.patch  0007-fix-route.patch  0008-add-inital-frontend.patch  0009-refactor-door_group.patch  0010-improve-user-and-leader-dashboard.patch  0011-add-new-routes.patch  index.html  package.json  softwareprojekt-gruppe-1.code-workspace  vite.config.ts
frontend/src/: ErrorPage.tsx  index.css  main.tsx
frontend/src/context/: UserContext.ts
frontend/src/css/: comment.css  header.css  login.css  (+3 more)
migration_helper/: Cargo.toml
migration_helper/src/: lib.rs
migrations/: 20221020190412_setup.down.sql  20221020190412_setup.up.sql  20230124191330_add_temp_keycard_validation.down.sql  20230124191330_add_temp_keycard_validation.up.sql
mock/: .env  Cargo.toml
mock/src/: main.rs
translations/: de.json  en.json
(+67 files in other folders)
