[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path = "../entities"}
migration-helper = {path = "../migration_helper"}
chrono = { version = "0.4.22" }
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-actix-rustls","sea-orm-macros","debug-print"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
orion = "0.17.2"
anyhow = "1.0.65"
dotenv = "0.15.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
actix-web = "4.1.0"
serde_urlencoded="0.7.1"
actix-cors = "0.6.2"
async-trait = "0.1.57"
jsonwebtoken = "8"
env_logger = "0.9.0"
log = "0.4.17"
itertools = "0.10.3"
utoipa = { version = "2.2.0", features = ["chrono","actix_extras","uuid",] }
utoipa-swagger-ui = { version = "2.0.1", features = ["actix-web"] }
uuid = "1.2.1"
thiserror = "1.0.37"
futures = "0.3.25"
futures-util = "0.3.25"