[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = {path = "../entities"}
migration-helper = {path = "../migration_helper"}
chrono = { version = "0.4" }
sea-orm = { version = "0.10", features = [ "sqlx-postgres", "runtime-actix-rustls","sea-orm-macros","debug-print"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
orion = "0.17"
anyhow = "1.0"
dotenv = "0.15"
tracing-subscriber = "0.3"
tracing = "0.1"
actix-files = "0.6"
actix-web-lab = "0.18"
actix-web = "4"
serde_urlencoded="0.7"
actix-cors = "0.6"
async-trait = "0.1"
jsonwebtoken = "8.2"
env_logger = "0.10"
itertools = "0.10"
utoipa = { version = "2.4", features = ["chrono","actix_extras","uuid","chrono"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }
uuid = "1.2"
thiserror = "1.0"
futures = "0.3"
futures-util = "0.3"
async-recursion = "1.0"
csv = "1"
lettre="0.10"
