[package]
name = "mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
entities = {path = "../entities"}
migration-helper = {path = "../migration_helper"}

chrono = { version = "0.4.22" }
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-actix-rustls","sea-orm-macros","debug-print"] }
serde = { version = "1", features = ["derive"] }
fake = { version = "2.5", features=['derive','chrono','http','uuid','random_color']}
rand = "0.8"
orion = "0.17.2"
anyhow = "1.0.65"
dotenv = "0.15.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
